exports[`NavigationBtn renders as active when passed as prop 1`] = `
<styled.button
  active={true}>
  <styled.span />
</styled.button>
`;

exports[`NavigationBtn renders correctly 1`] = `
<styled.button>
  <styled.span />
</styled.button>
`;

exports[`NavigationBtn renders icon when passed as prop 1`] = `
<styled.button>
  <styled.span>
    <styled.i
      className="material-icons">
      my-icon
    </styled.i>
  </styled.span>
</styled.button>
`;

exports[`NavigationBtn renders its children 1`] = `
<styled.button>
  <styled.span>
    Label
  </styled.span>
</styled.button>
`;
